@@ -1,3 +1,8 @@
+Tue Jan 24 2006  Loic Dachary  <loic@gnu.org>
+
+	* pokerui/pokerinterface.py (PokerInterface.updateMenu): 
+	* pokerclient2d/menu.c (handle_menu): kill display 2d/3d switch
+
 Tue Jan 24 2006  Johan Euphrosine <johan@mekensleep.org>
 
 	* pokerui/pokerrenderer.py: added wrap_text function instead of DummyWriter
